--- a/src/styles/AdminLogin.css
+++ b/src/styles/AdminLogin.css
@@ -5,7 +5,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     text-align: center;
-    background-color: white;
+    background-color: rgba(20, 20, 41, 0.966);
   }
   
   input {
