--- a/src/styles/HeroCarousel.css
+++ b/src/styles/HeroCarousel.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .carousel-text {
